--- a/css/main.css
+++ b/css/main.css
@@ -19,9 +19,17 @@ body {
   color: var(--dark-gray);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
+
 h1 {
   font-size: 4.5rem;
-  font-weight: 600;
 }
 
 .wrapper {
