--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,9 @@ h1 {
   margin: 0 auto;
 }
 
+/***
+MAIN
+***/
 .main {
   height: 95vh;
 }
@@ -54,6 +57,30 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+
+.main-content h1 {
+  margin-bottom: 2rem;
+}
+
+.main-content-generator {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.main-content-generator_box {
+  display: block;
+  text-align: center;
+  border: 2px solid var(--purple);
+  border-radius: 4px;
+  padding: 0.25rem 2rem;
+  font-size: 2.5rem;
+}
+
+/***
+FOOTER
+***/
 
 .footer {
   height: 5vh;
