--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ MAIN
   border: 2px solid var(--purple);
   border-radius: 4px;
   padding: 0.25rem 2rem;
+  width: 80%;
   font-size: 2.5rem;
 }
 
