--- a/css/main.css
+++ b/css/main.css
@@ -62,14 +62,24 @@ MAIN
   margin-bottom: 2rem;
 }
 
-.main-content-generator {
+.main-content__pass {
   width: 80%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  gap: 1rem;
 }
 
-.main-content-generator_box {
+/* TODO: Arreglar boton */
+.button-square {
+  background: var(--purple);
+  height: 100%;
+  border: none;
+  width: 50px;
+  border-radius: 2px;
+  color: var(--white);
+}
+
+.main-content__pass-box {
   display: block;
   text-align: center;
   border: 2px solid var(--purple);
