--- a/css/main.css
+++ b/css/main.css
@@ -49,13 +49,13 @@ MAIN
   height: 95vh;
 }
 
-.main-header {
+.header {
   height: 8%;
   display: flex;
   align-items: center;
 }
 
-.main-content {
+.content {
   height: 92%;
   display: flex;
   flex-direction: column;
@@ -63,7 +63,7 @@ MAIN
   align-items: center;
 }
 
-.main-content h1 {
+.content__title {
   margin-bottom: 2rem;
 }
 
@@ -134,105 +134,105 @@ FOOTER
   align-items: center;
 }
 
-
 /* Range */
 /*generated with Input range slider CSS style generator (version 20210711)
 https://toughengineer.github.io/demo/slider-styler*/
-input[type=range].styled-slider {
+input[type='range'].styled-slider {
   height: 5px;
   -webkit-appearance: none;
   width: 60%;
 }
 
 /*progress support*/
-input[type=range].styled-slider.slider-progress {
+input[type='range'].styled-slider.slider-progress {
   --range: calc(var(--max) - var(--min));
   --ratio: calc((var(--value) - var(--min)) / var(--range));
   --sx: calc(0.5 * 2em + var(--ratio) * (100% - 2em));
 }
 
 /*webkit*/
-input[type=range].styled-slider::-webkit-slider-thumb {
+input[type='range'].styled-slider::-webkit-slider-thumb {
   width: 2em;
   height: 2em;
   border-radius: 1600px;
-  background: #FFFFFF;
-  border: 4px solid #661AFF;
+  background: #ffffff;
+  border: 4px solid #661aff;
   box-shadow: 0 0 2px black;
-  margin-top: calc(7px * 0.5 - max(2em * 0.5,2px));
+  margin-top: calc(7px * 0.5 - max(2em * 0.5, 2px));
   -webkit-appearance: none;
 }
 
-input[type=range].styled-slider::-webkit-slider-runnable-track {
+input[type='range'].styled-slider::-webkit-slider-runnable-track {
   height: 7px;
   border-radius: 100px;
-  background: #F2F2F2;
+  background: #f2f2f2;
   border: none;
   box-shadow: none;
 }
-input[type=range].styled-slider.slider-progress::-webkit-slider-runnable-track {
-  background: linear-gradient(#661AFF,#661AFF) 0/var(--sx) 100% no-repeat, #F2F2F2;
+input[type='range'].styled-slider.slider-progress::-webkit-slider-runnable-track {
+  background: linear-gradient(#661aff, #661aff) 0 / var(--sx) 100% no-repeat,
+    #f2f2f2;
 }
 
 /*mozilla*/
-input[type=range].styled-slider::-moz-range-thumb {
-  width: max(calc(2em - 2px - 2px),0px);
-  height: max(calc(2em - 2px - 2px),0px);
+input[type='range'].styled-slider::-moz-range-thumb {
+  width: max(calc(2em - 2px - 2px), 0px);
+  height: max(calc(2em - 2px - 2px), 0px);
   border-radius: 1600px;
-  background: #FFFFFF;
-  border: 2px solid #661AFF;
+  background: #ffffff;
+  border: 2px solid #661aff;
   box-shadow: 0 0 2px black;
 }
 
-input[type=range].styled-slider::-moz-range-track {
+input[type='range'].styled-slider::-moz-range-track {
   height: 7px;
   border-radius: 100px;
-  background: #F2F2F2;
+  background: #f2f2f2;
   border: none;
   box-shadow: none;
 }
 
-input[type=range].styled-slider.slider-progress::-moz-range-track {
-  background: linear-gradient(#661AFF,#661AFF) 0/var(--sx) 100% no-repeat, #F2F2F2;
+input[type='range'].styled-slider.slider-progress::-moz-range-track {
+  background: linear-gradient(#661aff, #661aff) 0 / var(--sx) 100% no-repeat,
+    #f2f2f2;
 }
 
 /*ms*/
-input[type=range].styled-slider::-ms-fill-upper {
+input[type='range'].styled-slider::-ms-fill-upper {
   background: transparent;
   border-color: transparent;
 }
 
-input[type=range].styled-slider::-ms-fill-lower {
+input[type='range'].styled-slider::-ms-fill-lower {
   background: transparent;
   border-color: transparent;
 }
 
-input[type=range].styled-slider::-ms-thumb {
+input[type='range'].styled-slider::-ms-thumb {
   width: 2em;
   height: 2em;
   border-radius: 1600px;
-  background: #FFFFFF;
-  border: 2px solid #661AFF;
+  background: #ffffff;
+  border: 2px solid #661aff;
   box-shadow: 0 0 2px black;
   margin-top: 0;
   box-sizing: border-box;
 }
 
-input[type=range].styled-slider::-ms-track {
+input[type='range'].styled-slider::-ms-track {
   height: 7px;
   border-radius: 100px;
-  background: #F2F2F2;
+  background: #f2f2f2;
   border: none;
   box-shadow: none;
   box-sizing: border-box;
 }
 
-input[type=range].styled-slider.slider-progress::-ms-fill-lower {
+input[type='range'].styled-slider.slider-progress::-ms-fill-lower {
   height: 7px;
   border-radius: 100px 0 0 100px;
   margin: -undefined 0 -undefined -undefined;
-  background: #661AFF;
+  background: #661aff;
   border: none;
   border-right-width: 0;
 }
-
