--- a/css/main.css
+++ b/css/main.css
@@ -235,3 +235,67 @@ input[type='range'].styled-slider.slider-progress::-ms-fill-lower {
   border: none;
   border-right-width: 0;
 }
+
+/* Selec button */
+
+.checkboxs {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.checkboxs__ABC {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.checkboxs__abc {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+.toggle {
+  background-color: var(--light-gray);
+  width: 60px;
+  height: 32px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.toggle-active {
+  background-color: blue;
+  width: 60px;
+  height: 32px;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.checkbox-button {
+  display: none;
+}
+
+.slider {
+  height: 24px;
+  width: 24px;
+  background-color: white;
+  border-radius: 12px;
+  margin: 4px;
+}
+
+.checkbox-button:checked + .toggle {
+  background-color: var(--purple);
+}
+
+.checkbox-button:checked + .toggle > .slider {
+  align-self: flex-end;
+}
