Separate css file

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+@import './range.css';
+@import './select.css';
+
 :root {
   --purple: rgb(102, 26, 255);
   --dark-gray: rgb(88, 80, 79);
@@ -131,171 +134,4 @@ FOOTER
   height: 100%;
   display: flex;
   align-items: center;
-}
-
-/* Range */
-/*generated with Input range slider CSS style generator (version 20210711)
-https://toughengineer.github.io/demo/slider-styler*/
-input[type='range'].styled-slider {
-  height: 5px;
-  -webkit-appearance: none;
-  width: 60%;
-}
-
-/*progress support*/
-input[type='range'].styled-slider.slider-progress {
-  --range: calc(var(--max) - var(--min));
-  --ratio: calc((var(--value) - var(--min)) / var(--range));
-  --sx: calc(0.5 * 2em + var(--ratio) * (100% - 2em));
-}
-
-/*webkit*/
-input[type='range'].styled-slider::-webkit-slider-thumb {
-  width: 2em;
-  height: 2em;
-  border-radius: 1600px;
-  background: #ffffff;
-  border: 4px solid #661aff;
-  box-shadow: 0 0 2px black;
-  margin-top: calc(7px * 0.5 - max(2em * 0.5, 2px));
-  -webkit-appearance: none;
-}
-
-input[type='range'].styled-slider::-webkit-slider-runnable-track {
-  height: 7px;
-  border-radius: 100px;
-  background: #f2f2f2;
-  border: none;
-  box-shadow: none;
-}
-input[type='range'].styled-slider.slider-progress::-webkit-slider-runnable-track {
-  background: linear-gradient(#661aff, #661aff) 0 / var(--sx) 100% no-repeat,
-    #f2f2f2;
-}
-
-/*mozilla*/
-input[type='range'].styled-slider::-moz-range-thumb {
-  width: max(calc(2em - 2px - 2px), 0px);
-  height: max(calc(2em - 2px - 2px), 0px);
-  border-radius: 1600px;
-  background: #ffffff;
-  border: 2px solid #661aff;
-  box-shadow: 0 0 2px black;
-}
-
-input[type='range'].styled-slider::-moz-range-track {
-  height: 7px;
-  border-radius: 100px;
-  background: #f2f2f2;
-  border: none;
-  box-shadow: none;
-}
-
-input[type='range'].styled-slider.slider-progress::-moz-range-track {
-  background: linear-gradient(#661aff, #661aff) 0 / var(--sx) 100% no-repeat,
-    #f2f2f2;
-}
-
-/*ms*/
-input[type='range'].styled-slider::-ms-fill-upper {
-  background: transparent;
-  border-color: transparent;
-}
-
-input[type='range'].styled-slider::-ms-fill-lower {
-  background: transparent;
-  border-color: transparent;
-}
-
-input[type='range'].styled-slider::-ms-thumb {
-  width: 2em;
-  height: 2em;
-  border-radius: 1600px;
-  background: #ffffff;
-  border: 2px solid #661aff;
-  box-shadow: 0 0 2px black;
-  margin-top: 0;
-  box-sizing: border-box;
-}
-
-input[type='range'].styled-slider::-ms-track {
-  height: 7px;
-  border-radius: 100px;
-  background: #f2f2f2;
-  border: none;
-  box-shadow: none;
-  box-sizing: border-box;
-}
-
-input[type='range'].styled-slider.slider-progress::-ms-fill-lower {
-  height: 7px;
-  border-radius: 100px 0 0 100px;
-  margin: -undefined 0 -undefined -undefined;
-  background: #661aff;
-  border: none;
-  border-right-width: 0;
-}
-
-/* Selec button */
-
-.checkboxs {
-  margin-top: 2rem;
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.checkboxs__ABC {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-.checkboxs__abc {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-  font-size: 2rem;
-  font-weight: 600;
-}
-
-.toggle {
-  background-color: var(--light-gray);
-  width: 60px;
-  height: 32px;
-  border-radius: 16px;
-  display: flex;
-  flex-direction: column;
-}
-
-.toggle-active {
-  background-color: blue;
-  width: 60px;
-  height: 32px;
-  border-radius: 16px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-}
-
-.checkbox-button {
-  display: none;
-}
-
-.slider {
-  height: 24px;
-  width: 24px;
-  background-color: white;
-  border-radius: 12px;
-  margin: 4px;
-}
-
-.checkbox-button:checked + .toggle {
-  background-color: var(--purple);
-}
-
-.checkbox-button:checked + .toggle > .slider {
-  align-self: flex-end;
 }
