--- a/css/select.css
+++ b/css/select.css
@@ -5,6 +5,10 @@
   font-weight: 700;
 }
 
+.checkboxs__title--inactive {
+  color: var(--inactive-grey);
+}
+
 .checkbox {
   display: none;
 }
@@ -19,7 +23,7 @@
 }
 
 .checkbox__toggle--active {
-  background-color: blue;
+  background-color: var(--purple);
   width: 60px;
   height: 32px;
   border-radius: 16px;
